<resources>
    <string name="app_name"> MruLibraryBooking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Student Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="mru_library_logo">Mru Library Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_booking">New booking</string>
    <string name="Student_booking_info">Student Booking Info</string>


    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="Student_Booking_Info">Student Booking Info</string>
    <string name="student_name">Student Name</string>
</resources>
