<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relLayout1"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_registration"
            android:textSize="25sp"
            android:textColor="@color/Black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:id="@+id/textEmailReg"/>


            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:layout_below="@+id/textEmailReg"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_below="@+id/input_email"/>

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_below="@+id/input_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <EditText
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/input_confirm_password"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/student_name"
            android:inputType="textPersonName" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:text="@string/register"
            android:background="@drawable/blue_button"
            android:layout_below="@+id/student_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



</RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>